<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" app:cardBackgroundColor="@color/card1" app:strokeColor="@android:color/transparent">
                <LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
                        <ImageView android:background="@drawable/round_icon" android:padding="5.0dip" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/ic_google_play" android:layout_marginEnd="8.0dip" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/textfloat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/service_info" />
                    </LinearLayout>
                    <TextView android:textSize="14.0sp" android:textColor="@color/subtext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/manage_info_app_google_mobile_services_gms_and_google_playstore" />
                    <TextView android:textSize="16.0sp" android:textColor="@color/textfloat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/google_play_services" />
                    <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@id/info_gms" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_info" app:backgroundTint="@color/main" app:cornerRadius="30.0dip" app:icon="@drawable/info_24px" app:iconTint="@color/white" app:rippleColor="@color/ripple_color" />
                    <TextView android:textSize="16.0sp" android:textColor="@color/textfloat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/google_playstore" />
                    <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@id/info_gp" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_info" app:backgroundTint="@color/main" app:cornerRadius="30.0dip" app:icon="@drawable/info_24px" app:iconTint="@color/white" app:rippleColor="@color/ripple_color" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" app:cardBackgroundColor="@color/card1" app:strokeColor="@android:color/transparent">
                <LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
                        <ImageView android:background="@drawable/round_icon" android:padding="5.0dip" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/ic_google_chrome" android:layout_marginEnd="8.0dip" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/textfloat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/google_chrome" />
                    </LinearLayout>
                    <TextView android:textSize="14.0sp" android:textColor="@color/subtext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/manage_info_app_google_chrome_like_delete_all_data_and_cache" />
                    <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@id/info_chrome" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_info" app:backgroundTint="@color/main" app:cornerRadius="30.0dip" app:icon="@drawable/info_24px" app:iconTint="@color/white" app:rippleColor="@color/ripple_color" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>