<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:title="@string/app_name_toolbar" app:titleTextColor="@color/textfloat" />
        <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" app:cardBackgroundColor="@color/card1" app:strokeColor="@android:color/transparent">
                    <LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="5.0dip">
                            <ImageView android:background="@drawable/round_icon" android:padding="5.0dip" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/ic_minus_circle_outline" android:layout_marginEnd="8.0dip" />
                            <TextView android:textSize="16.0sp" android:textColor="@color/textfloat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/choose_a_method" android:layout_weight="1.0" />
                            <TextView android:textSize="16.0sp" android:textColor="@color/textfloat" android:id="@id/startTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/startarr" />
                        </LinearLayout>
                        <TextView android:textSize="14.0sp" android:textColor="@color/subtext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/subinfoswitch" />
                        <RadioGroup android:id="@id/radioGroup" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <RadioButton android:id="@id/radio_button_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Root method" />
                            <RadioButton android:id="@id/radio_button_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Kernel method" />
                        </RadioGroup>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>