<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" app:cardBackgroundColor="@color/card1" app:strokeColor="@android:color/transparent">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ImageView android:background="@drawable/round_icon" android:padding="5.0dip" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/info_24px" android:layout_marginEnd="10.0dip" />
                    <TextView android:textSize="16.0sp" android:textColor="@color/textfloat" android:id="@id/excmode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_root_permission_obtained_only_effective_using_virtual_manchine" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" app:cardBackgroundColor="@color/card1" app:strokeColor="@android:color/transparent">
                <LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:textSize="16.0sp" android:textColor="@color/textfloat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kernel" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/subtext" android:id="@id/kernelver" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="4.19.157perf" />
                    <TextView android:textSize="16.0sp" android:textColor="@color/textfloat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/fingerprint" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/subtext" android:id="@id/devfinger" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="POCO" />
                    <TextView android:textSize="16.0sp" android:textColor="@color/textfloat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/selinux_status" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/subtext" android:id="@id/selinuxstat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Enforcing" />
                    <TextView android:textSize="16.0sp" android:textColor="@color/textfloat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="Package" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/subtext" android:id="@id/pkgname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Enforcing" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" app:cardBackgroundColor="@color/card1" app:strokeColor="@android:color/transparent">
                <LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
                        <ImageView android:id="@id/imageexc" android:background="@drawable/round_icon" android:padding="5.0dip" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/baseline_tag_24" android:layout_marginEnd="8.0dip" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/textfloat" android:id="@id/titlestart" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_hack_for_root_mode" />
                    </LinearLayout>
                    <TextView android:textSize="14.0sp" android:textColor="@color/subtext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/hiderecinfo" />
                    <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@id/btnStart" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Start" app:backgroundTint="@color/main" app:cornerRadius="30.0dip" app:icon="@drawable/ic_play" app:iconTint="@color/white" app:rippleColor="@color/ripple_color" />
                    <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@id/btnStop" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Stop" app:backgroundTint="@color/main" app:cornerRadius="30.0dip" app:icon="@drawable/ic_stop" app:iconTint="@color/white" app:rippleColor="@color/ripple_color" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView android:id="@id/opentele" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" app:cardBackgroundColor="@color/card1" app:strokeColor="@android:color/transparent">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ImageView android:background="@drawable/round_icon" android:padding="5.0dip" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/help_24px" android:layout_marginEnd="10.0dip" />
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="16.0sp" android:textColor="@color/textfloat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="About Laragon" />
                        <TextView android:textSize="14.0sp" android:textColor="@color/subtext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Learn about Laragon" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>