<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" app:cardBackgroundColor="@color/card1" app:strokeColor="@android:color/transparent">
                <LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
                        <ImageView android:background="@drawable/round_icon" android:padding="5.0dip" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/ic_download_circle_outline" android:layout_marginEnd="8.0dip" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/textfloat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/driver_pack_downloader" />
                    </LinearLayout>
                    <TextView android:textSize="14.0sp" android:textColor="@color/subtext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/s_driver_pack" />
                    <com.google.android.material.progressindicator.LinearProgressIndicator android:id="@id/progressd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" app:indicatorColor="@color/main" app:trackColor="#ffaaaaaa" app:trackCornerRadius="5.0dip" app:trackThickness="5.0dip" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/textfloat" android:layout_gravity="right" android:id="@id/txtprogress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0%" />
                    <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@id/driver_download" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Download" app:backgroundTint="@color/main" app:cornerRadius="30.0dip" app:icon="@drawable/ic_arrow_down_bold_circle" app:iconTint="@color/white" app:rippleColor="@color/ripple_color" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" app:cardBackgroundColor="@color/card1" app:strokeColor="@android:color/transparent">
                <LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
                        <ImageView android:background="@drawable/round_icon" android:padding="5.0dip" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/terminal_24px" android:layout_marginEnd="8.0dip" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/textfloat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/flashing_kernel_driver" />
                    </LinearLayout>
                    <TextView android:textSize="14.0sp" android:textColor="@color/subtext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/kernel_subinfo" />
                    <Spinner android:id="@id/spinner_scripts" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" />
                    <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@id/btn_execute" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Execute" app:backgroundTint="@color/main" app:cornerRadius="30.0dip" app:icon="@drawable/ic_play" app:iconTint="@color/white" app:rippleColor="@color/ripple_color" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>